@@ -1,0 +1,14 @@
+#ifndef IRCV3_CAP_H
+#define IRCV3_CAP_H
+
+#ifndef IRCV3_CAPS
+#define IRCV3_CAPS \
+       X("multi-prefix", multi_prefix)
+
+struct ircv3_caps
+{
+       int multi_prefix;
+};
+#endif
+
+#endif
